src/App/src/App.css
:root {
  --margin-base: 0.8%;
  --gap-base: 0.8%;
  --button-height: 2rem;
  --header-btn-font-size: 1rem;
  --header-btn-icon-size: 1rem;
}

.main-container {
  display: flex;
  flex-direction: row;
  height: calc(100vh - 6vh);
  gap: var(--gap-base);
  margin-inline: var(--margin-base);
}

.main-container > div {
  margin-block: var(--margin-base);
}

body {
  height: 100vh;
  background-color: #f5f5f5;
}

#root {
  height: 100%;
}

.header {
  display: flex;
  align-items: center;
  height: 6vh;
  justify-content: space-between;
  background-color: #fff;
}

.header-logo {
  width: 30px;
  height: 30px;
  margin-right: 10px;
}

.header-title {
  color: #242424;
  margin-left: 0.5rem;
}

.header-title span {
  font-weight: 400;
}

.left-section {
  position: relative;
  margin-block-end: 0.1% !important;
}

.header-left-section {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 1%;
  gap: 10px;
}

.header-right-section {
  margin-right: 1%;
  display: flex;
  gap: 0.25rem;
}

.answerDisclaimer {
  font-size: var(--answer-disclaimer-font, 12px);
  color: #a0a0a0;
}


.userNameContainer {
  padding-right: .5rem;
}

.avatarContainer {
  height: 100%; 
  width: 3rem; 
  border-left: 3px solid #FFFFFF;
  align-items: center; 
  justify-content: center;
  padding: 12px;
}

/* Large screens (≥992px) */
@media (min-width: 992px) {
  .header-title {
    font-size: 0.7rem;
  }
  :root {
    --button-height: 1.3rem;
    --header-btn-font-size: 0.6rem;
    --header-btn-icon-size: 1rem;
  }
}

/* Extra Large screens (≥1200px) */
@media (min-width: 1200px) {
  .header-title {
    font-size: 0.9rem;
  }
  :root {
    --button-height: 1.5rem;
    --header-btn-font-size: 0.7rem;
    --header-btn-icon-size: 1.1rem;
  }
}

/* Extra Extra Large screens (≥1400px) */
@media (min-width: 1400px) {
  .header-title {
    font-size: 1.1rem;
  }
  :root {
    --button-height: 2rem;
    --header-btn-font-size: 0.8rem;
    --header-btn-icon-size: 1.2rem;
  }
}

/* Very Extra Large screens (≥1600px) */
@media (min-width: 1600px) {
  .header-title {
    font-size: 1.3rem;
  }
  :root {
    --button-height: 2.2rem;
    --header-btn-font-size: 1rem;
    --header-btn-icon-size: 1.4rem;
  }
}

